JVM options changes